# ai-industry

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  justfile  pyproject.toml  topics-not-covered.md
notebooks/: Marc explore.ipynb  explore-distribution-and-detrending.ipynb  explore-distribution-and-trends.ipynb  explore.ipynb  explore_autoencoder.ipynb  explore_gmm.ipynb  explore_kde.ipynb  explore_nn.ipynb  explore_rf.ipynb
notebooks/util/: util.py
resources/dataset/: 6_gecco2019_test_water_quality.csv
