[tool.poetry]
name = "anomaly detection for contamination detection in water networks"
version = "0.1.0"
description = ""
authors = ["Marc Thieme <marcthieme2403@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.3"
seaborn = "^0.13.2"
notebook = "^7.2.2"
pytest = "^8.3.3"
nbdime = "^4.0.2"
scikit-learn = "^1.5.2"
jedi = "^0.19.2"
ipython = "^8.29.0"
tensorflow = "^2.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
